samples/session/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: session
  labels:
    # If Ambient is deployed, use it.
    istio.io/dataplane-mode: ambient
