samples/session/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: session
spec:
  ports:
    - port: 8080
      name: http-echo
    - port: 8081
      name: grpc-echo
    # No selector
