samples/session/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: waypoint
  namespace: session
spec:
  podSelector:
    matchLabels:
      istio: session
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pods
  namespace: session
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: session
          podSelector:
            matchLabels:
              istio: session
